# SlowLoris

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .logging.json  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST  Makefile  README.md  README.rst  SlowLoris_log2017-02-14 20:33_errors.txt  SlowLoris_log_2017-02-14 20:33.txt  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  slowloris.py  test_sl.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: publish_package.yml  pull_request.yml
PySlowLoris/: __version__.py  attack.py  cli.py  uri_info.py  utils.py
PySlowLoris-0.1.29.8/PySlowLoris/: __init__.py  __version__.py
PySlowLoris/slowloris/: __init__.py  connection.py  pingtest.py  slowloris.py  targetinfo.py
SlowLoris/: __init__.py  cli.py  logging.ini
SlowLoris/slowloris/: __init__.py  connection.py  pingtest.py  slowloris.py  targetinfo.py
httpd_test/: Dockerfile  README.md  index.html
pyalowloris/: __main__.py  exceptions.py  logger.py
pyslowloris/: __init__.py  __main__.py  attack.py  connection.py  logger.py  uri_info.py  utils.py
slowloris/: slowloris.py
tests/: test_sl.py  test_slowloris.py  test_url_info.py  test_urls.txt
